welcome.lessons.welcome.bat.bool2.TeenSum.scala.error
teenSum:-6: error: Missing closing brace `}' assumed here
try {
^teenSum:1: error: expected class or object definition
def teenSum(a:Int, b:Int):Int = {
^